Fixed the issue with the wiki where the top of the page was being cut off .. now this is working and I'm happy about it!

--- a/wiki/pub/skins/mycms_skin/pmwiki.css
+++ b/wiki/pub/skins/mycms_skin/pmwiki.css
@@ -10,7 +10,6 @@
 
 /* This sets the overall frame for the site */
 body {
-  margin:0px; 
   background-color:#f7f7f7; 
   font-family:Georgia,"Times New Roman",serif; 
   font-size:13pt;
